# ai-usage-log

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  devenv.nix  devenv.root  flake.nix  pyproject.toml
.claude/: branch-strategy.yaml
.github/workflows/: ci.yml  release.yml
docs/reference/: claude-devtools-message-grouping.md  claude-jsonl-format.md
skill/ai-usage-log/: SKILL.md
skill/ai-usage-log/assets/: daily-summary-template.md
src/ai_usage_log/: __init__.py  context.py  server.py
src/ai_usage_log/config/: settings.py
src/ai_usage_log/models/: schemas.py
src/ai_usage_log/services/: __init__.py  claude_session_service.py  jsonl_stats_service.py  project_service.py  session_service.py  stats_service.py  structure_service.py  tracking_service.py
src/ai_usage_log/skill_data/: SKILL.md
src/ai_usage_log/templates/: __init__.py  file_templates.py
src/ai_usage_log/tools/: claude_session_tools.py  context_tools.py  daily_tools.py  jsonl_stats_tools.py  project_tools.py  session_tools.py  skill_tools.py  stats_tools.py  tracking_tools.py
src/ai_usage_log/utils/: cache.py  content.py  filename.py
tests/: test_claude_session_service.py  test_content_utils.py  test_filename_utils.py  test_jsonl_stats_service.py  test_project_service.py  test_real_session_integration.py  test_session_service.py  test_settings.py  test_stats_service.py  test_structure_service.py  test_tracking_service.py
tool/: bump_version.py
